Fix meeting panel display on mobile
- And update react-scripts

--- a/src/client/styles/index.css
+++ b/src/client/styles/index.css
@@ -5,12 +5,14 @@
 }
 
 #app {
+  display: flex;
+  flex-flow: column;
   flex: 1 1 auto;
   overflow: overlay;
 }
 
 .app-container {
-  min-height: 100%;
+  flex: 1 1 auto;
   padding-top: 1vh;
   padding-bottom: 1vh;
   background-attachment: fixed;
@@ -144,12 +146,12 @@ input[type='checkbox']:focus {
 }
 
 *::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px var(--info);
+  box-shadow: inset 0 0 10px 10px rgb(100, 100, 100);
   border: solid 5px transparent;
   border-radius: 10px;
 }
 *::-webkit-scrollbar-thumb:hover {
-  box-shadow: inset 0 0 10px 10px var(--warning);
+  box-shadow: inset 0 0 10px 10px rgb(80, 80, 80);
 }
 
 *::-webkit-scrollbar-corner {
